--- a/src/components/cardTypes/projectCards.css
+++ b/src/components/cardTypes/projectCards.css
@@ -18,10 +18,49 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-.sticky
+.projectSticky
 {
-    width: 600px;
-    height: 600px;
+    margin-bottom: 15px;
+    background-color: white;
+    width: 500px;
+    height: 500px;
+    clip-path: 
+    polygon(
+      0% 0%,     /* top left */
+      0% 0%,     /* top left */
+      100% 0%,    /* top right */
+      100% 0%,   /* top right */
+      100% 80%,  /* bottom right */
+      80% 100%,  /* bottom right */
+      0% 100%,   /* bottom left */
+      0 100%      /* bottom left */
+    );
+}
+
+.stickyDogEar
+{
+    position:absolute;
+    width: 500px;
+    height: 100%;
+    background-color: rgb(14,14,14);
+    color: red;
+}
+
+.stickyShadowWrapper
+{
+    filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24)  );
+}
+
+.projectStickyTitle
+{
+    color:rgb(14,14,14);
+    display:inline-block;
+    font-family: aktiv-grotesk-extended,serif;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 20px;
+    padding-top:11px;
+    padding-left:20px;
 }
 
 .noMargin
