--- a/src/components/cardTypes/projectCards.css
+++ b/src/components/cardTypes/projectCards.css
@@ -1,11 +1,23 @@
 .projectContainer
 {
-    margin-left:580px;
+    
+display:grid;
+grid-template-columns: 500px auto;
+column-gap: 30px;
+margin-top: 50px;
+height: 100%;
 }
 
-.testMain
+.projectLeft 
 {
-    margin-top: 50px;
+    position:sticky;
+    top:90px;
+    align-self: flex-start;
+    display: block; 
+}
+
+.projectRight
+{
     display: block;
 }
 
@@ -20,10 +32,11 @@
 
 .projectSticky
 {
+    
     margin-bottom: 15px;
-    background-color: white;
-    width: 500px;
-    height: 500px;
+    background-color: rgb(211, 240, 252);
+    width: 450px;
+    height: 320px;
     clip-path: 
     polygon(
       0% 0%,     /* top left */
@@ -35,32 +48,54 @@
       0% 100%,   /* bottom left */
       0 100%      /* bottom left */
     );
+    opacity: 0.95;
+    
+    
 }
 
-.stickyDogEar
+.dogear
 {
+     clip-path: 
+    polygon(
+      80% 80%,     /* top left */
+      80% 80%,     /* top left */
+      100% 80%,    /* top right */
+      100% 0%,   /* top right */
+      100% 80%,  /* bottom right */
+      80% 100%,  /* bottom right */
+      80% 100%,   /* bottom left */
+      80% 100%      /* bottom left */
+    );
     position:absolute;
-    width: 500px;
+    width: 100%;
     height: 100%;
-    background-color: rgb(14,14,14);
-    color: red;
+    background-color: rgb(187, 225, 240);
 }
 
 .stickyShadowWrapper
 {
-    filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.24)  );
+    filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.10)) drop-shadow( 0 1px 1px rgba(0,0,0,0.20));
 }
 
-.projectStickyTitle
+.stickyTitle
 {
     color:rgb(14,14,14);
     display:inline-block;
     font-family: aktiv-grotesk-extended,serif;
     font-weight: 700;
     font-style: normal;
-    font-size: 20px;
+    font-size: 21px;
     padding-top:11px;
     padding-left:20px;
+}
+
+.stickyCopy
+{
+    color:rgb(14,14,14);
+    margin-top: 30px;
+    margin-left: 60px;
+    font-size: 20px;
+    font-family:  ff-meta-serif-web-pro, serif;
 }
 
 .noMargin
@@ -151,6 +186,7 @@
 
 .projectCardImage 
 {
+    
     height: 100%;
     background-color:rgb(244, 244, 244);
 }
@@ -169,3 +205,11 @@
     background-color: white;
     color:rgb(213,213,213);
 }
+
+.redden
+{
+    background-color: rgb(187, 225, 240);
+    color:rgb(213,213,213);
+    border-bottom: 1px solid rgb(139, 188, 208);
+}
+
