--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 @import "./components/feed.css";
 @import "./components/cards.css";
 @import "./components/info.css";
-@import "./components/test.css";
 @import "./components/footer.css";
 @import "./components/projectHead.css";
 @import "./components/cardTypes/projectCards.css";
@@ -44,6 +43,11 @@ float:right;
 {
     background-color:rgb(158, 208, 227);
     color:rgb(158, 208, 227);
+}
+
+.red
+{
+   background-color: #ff4329;
 }
 
 .core
