--- a/src/components/cardTypes/projectCards.css
+++ b/src/components/cardTypes/projectCards.css
@@ -3,7 +3,7 @@
     
 display:grid;
 grid-template-columns: 500px auto;
-column-gap: 30px;
+column-gap: 20px;
 margin-top: 50px;
 height: 100%;
 }
@@ -14,6 +14,7 @@ height: 100%;
     top:90px;
     align-self: flex-start;
     display: block; 
+    
 }
 
 .projectRight
@@ -34,9 +35,9 @@ height: 100%;
 {
     
     margin-bottom: 15px;
-    background-color: rgb(211, 240, 252);
+    
     width: 450px;
-    height: 320px;
+    height: 330px;
     clip-path: 
     polygon(
       0% 0%,     /* top left */
@@ -69,12 +70,14 @@ height: 100%;
     position:absolute;
     width: 100%;
     height: 100%;
-    background-color: rgb(187, 225, 240);
 }
 
 .stickyShadowWrapper
 {
+    margin-left: 0px;
+    margin-right: 0px;
     filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.10)) drop-shadow( 0 1px 1px rgba(0,0,0,0.20));
+    display: block;
 }
 
 .stickyTitle
@@ -83,19 +86,39 @@ height: 100%;
     display:inline-block;
     font-family: aktiv-grotesk-extended,serif;
     font-weight: 700;
-    font-style: normal;
-    font-size: 21px;
+    font-style: italic;
+    font-size: 20px;
     padding-top:11px;
     padding-left:20px;
+    text-transform: uppercase;
+
+}
+
+.stickyCopyContainer
+{
+    margin-top:30px;
+    margin-right:60px;
+    margin-left: 40px;
+}
+
+.stickyImage 
+{
+    width:50px;
+    height: 50px;
+    vertical-align: middle;
+    margin-right: 20px;
+    opacity:1;
+    border-radius: 25px;
 }
 
 .stickyCopy
 {
     color:rgb(14,14,14);
-    margin-top: 30px;
-    margin-left: 60px;
+    margin-bottom: 20px;
+    font-weight: 400;
     font-size: 20px;
-    font-family:  ff-meta-serif-web-pro, serif;
+    font-family:  aktiv-grotesk, serif;
+   
 }
 
 .noMargin
@@ -206,10 +229,205 @@ height: 100%;
     color:rgb(213,213,213);
 }
 
-.redden
+.stickyBlue
 {
     background-color: rgb(187, 225, 240);
     color:rgb(213,213,213);
     border-bottom: 1px solid rgb(139, 188, 208);
 }
 
+.stickyBlueBack
+{
+    background-color: rgb(211, 240, 252);
+}
+
+.stickyGrey 
+{
+    filter:grayscale(.1);
+ background-color:#ffffff;
+ border-bottom: 1px solid rgb(222, 222, 222);
+}
+
+.stickyGreyBack
+{
+    filter:grayscale(.1);
+    background-color:#f4f4f4;  
+}
+
+
+@media screen and (max-width: 1550px) {
+    .projectCardDiv
+{
+    width: 750px;
+    
+}
+
+.projectSticky
+{
+    
+    
+    width: 370px;
+    height: 300px;
+}
+
+.projectCardSubtitle
+{
+    font-size: 25px;
+}
+
+.projectCardParagraph
+{ 
+    font-size: 18px;
+    width: 450px;
+}
+
+.stickyCopy
+{
+    margin-bottom: 20px;
+    font-size: 18px;
+   
+}
+
+.stickyImage 
+{
+    width:40px;
+    height: 40px;
+   
+}
+    
+  }
+
+@media screen and (max-width: 1180px) {
+    .projectCardDiv
+    {
+        width: 900px;
+        
+    }
+    .projectContainer
+    {
+    display:grid;
+    flex-wrap: wrap;
+    grid-template-columns: 1500px auto;
+    column-gap: 30px;
+    margin-top: 50px;
+    height: 100%;
+    }
+
+    .projectLeft 
+    {
+        position:relative;
+        top:0px;
+        align-self: flex-start;
+        display: inline-block; 
+        width: 1500px;
+        display:flex;
+        justify-content: center;
+        margin-bottom: 60px;
+        
+    }
+
+    .stickyShadowWrapper
+    {
+        display:inline-block;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .projectSticky
+    {
+        width: 440px;
+        height: 330px;
+        margin-bottom: 0px;
+    }
+
+        .dogear
+    {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media screen and (max-width: 920px) {
+    .projectCardDiv
+    {
+        
+        width: 100%;
+        
+    }
+    .projectContainer
+    {
+        
+    display:flex;
+   
+    height: 100%;
+    }
+
+    .projectRight
+    {
+        width: 100%;
+    }
+
+    .projectLeft
+    {
+
+    top:0px;
+    margin-bottom:30px;
+    align-self: flex-start;
+    display: block; 
+    justify-content: center;
+    }
+
+    .stickyShadowWrapper
+    {
+        width: 100%;
+        margin-left:0;
+        margin-right:0;
+        margin-bottom:15px;
+    }
+    .projectSticky
+    {
+        width:100%;
+        height: 300px;
+        clip-path: 
+        polygon(
+        0% 0%,     /* top left */
+        0% 0%,     /* top left */
+        100% 0%,    /* top right */
+        100% 0%,   /* top right */
+        100% 100%,  /* bottom right */
+        100% 100%,  /* bottom right */
+        0% 100%,   /* bottom left */
+        0 100%      /* bottom left */
+        );
+    }
+
+    .dogear
+    {
+        opacity:0;
+    }
+
+    .projectCardCopy
+    {
+        margin-left: 30px;
+    }
+
+    .projectCardCaption
+    {
+        margin-left:30px;
+        margin-right:30px;
+    }
+
+    .projectCardParagraph
+    {
+        margin-top: 15px;
+        font-size: 15px;
+        font-family: ff-meta-serif-web-pro, serif;
+        width: 300px;
+    }
+
+    .projectCardSubtitle
+    {
+        font-size: 20px;
+    }
+
+}
