--- a/src/components/cardTypes/projectCards.css
+++ b/src/components/cardTypes/projectCards.css
@@ -141,26 +141,78 @@ height: 100%;
     color:rgb(213,213,213);
 }
 
+.projectMultiImageBody
+{
+    margin-top:100px;
+    width:100%;
+    height: 1000px;
+    display:grid;
+    grid-template-columns: 460px 460px;
+    grid-template-rows: 500px 500px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.multiImageContainer
+{
+    
+    justify-self:center;
+}
+
+.multiImageImage
+{
+    position:relative;
+    display:block;
+    width: 440px;
+    height: 350px;
+    background-color:rgb(244, 244, 244);
+}
+
+.multiImageCaption
+{
+    margin-top: 8px;
+    font-size: 18px;
+    margin-right:0;
+    font-family: ff-meta-serif-web-pro, serif;
+    width: 430px;
+    display:block;
+    position:relative;
+    text-align: center;
+}
+
+.multiImageCaptionHead
+{
+    font-family:aktiv-grotesk-extended, serif;
+    font-weight:600;
+    font-size: 20px;
+    margin-top:20px;
+    text-align: center;
+    text-transform: uppercase;
+
+}
+
 
 
 
 @media screen and (max-width: 1550px) {
     .projectCardDiv
-{
-    width: 750px;
+    {
+        width: 750px;
+        
+    }
+
+    .projectCardSubtitle
+    {
+        font-size: 25px;
+    }
+
+    .projectCardParagraph
+    { 
+        font-size: 18px;
+        width: 450px;
+    }
+
     
-}
-
-.projectCardSubtitle
-{
-    font-size: 25px;
-}
-
-.projectCardParagraph
-{ 
-    font-size: 18px;
-    width: 450px;
-}
 
 
     
