--- a/src/components/projectHead.css
+++ b/src/components/projectHead.css
@@ -21,9 +21,19 @@
 {
     position:relative;
     display: inline-block;
-    width: 250px;
+    width: 270px;
     vertical-align: middle;
-    margin-right: 50px;
+    margin-right: 30px;
+    filter:drop-shadow( 0 1px 2px rgba(0,0,0,0.06)) drop-shadow( 0 1px 1px rgba(0,0,0,0.12));
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    border-radius: 10px;;
+}
+
+.projectLogo:hover
+{
+    margin-top:-20px;
+    margin-bottom:20px;
+    filter:drop-shadow( 0 14px 28px rgba(0,0,0,0.07) ) drop-shadow(0 10px 10px rgba(0,0,0,0.11)) ;
 }
 
 .projectHeadTitle
@@ -83,7 +93,7 @@
     right:-191px;
     transform: rotate(90deg);
     margin-top:115px;
-    color:rgb(14, 14, 14);
+    color:rgb(142, 142, 142);
     
 }
 
