--- a/src/components/cardTypes/projectCards.css
+++ b/src/components/cardTypes/projectCards.css
@@ -1,307 +1,226 @@
-.projectContainer
-{
-    
-display:grid;
-grid-template-columns: 500px auto;
-column-gap: 20px;
-margin-top: 50px;
-height: 100%;
+.projectContainer {
+  display: grid;
+  grid-template-columns: 500px auto;
+  column-gap: 20px;
+  margin-top: 50px;
+  height: 100%;
 }
 
-.projectLeft 
-{
-    position:sticky;
-    top:90px;
-    align-self: flex-start;
-    display: block; 
-    
+.projectLeft {
+  position: sticky;
+  top: 90px;
+  align-self: flex-start;
+  display: block;
 }
 
-.projectRight
-{
-    display: block;
+.projectRight {
+  display: block;
 }
 
-.projectCardDiv
-{
-    width: 1050px;
-    margin-bottom: 15px;
-    background-color: white;
-    padding-bottom: 30px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+.projectCardDiv {
+  width: 1050px;
+  margin-bottom: 15px;
+  background-color: white;
+  padding-bottom: 30px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-
-
-.noMargin
-{
-    margin-bottom: 0px;
+.noMargin {
+  margin-bottom: 0px;
 }
 
-.noPadding
-{
-    padding-bottom:0px;
+.noPadding {
+  padding-bottom: 0px;
 }
 
-.grey
-{
-    background-color: rgb(255, 255, 255);
+.grey {
+  background-color: rgb(255, 255, 255);
 }
 
-.projectCardHead
-{
-    background-color: rgb(14, 14, 14);
-    width: 100%;
-    height: 48px;
-    border-bottom: 1px solid rgb(228, 228, 228);
+.projectCardHead {
+  background-color: rgb(14, 14, 14);
+  width: 100%;
+  height: 48px;
+  border-bottom: 1px solid rgb(228, 228, 228);
 }
 
-.projectCardTitle
-{
-
-    color:rgb(255, 255, 255);
-    display:inline-block;
-    font-family: aktiv-grotesk-extended,serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 20px;
-    padding-top:11px;
-    padding-left:20px;
-    text-transform:uppercase;
+.projectCardTitle {
+  color: rgb(255, 255, 255);
+  display: inline-block;
+  font-family: aktiv-grotesk-extended, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 20px;
+  padding-top: 11px;
+  padding-left: 20px;
+  text-transform: uppercase;
 }
 
-.projectCardCopy
-{
-    margin-left: 60px;
-    padding-bottom: 50px;
+.projectCardCopy {
+  margin-left: 60px;
+  padding-bottom: 50px;
 }
 
-.projectCardBody
-{
-    margin-top: 50px;
+.projectCardBody {
+  margin-top: 50px;
 }
 
-.projectCardSubtitle
-{
-    color: rgb(14, 14, 14);
-    font-family: aktiv-grotesk-extended,serif;
-    font-size: 30px;
-    font-weight: 600;
-    
+.projectCardSubtitle {
+  color: rgb(14, 14, 14);
+  font-family: aktiv-grotesk-extended, serif;
+  font-size: 30px;
+  font-weight: 600;
 }
 
-.projectCardSubtitle2
-{
-    color: rgb(14, 14, 14);
-    font-family: aktiv-grotesk-extended,serif;
-    font-size: 20px;
-    font-weight: 600;
+.projectCardSubtitle2 {
+  color: rgb(14, 14, 14);
+  font-family: aktiv-grotesk-extended, serif;
+  font-size: 20px;
+  font-weight: 600;
 }
 
-.projectCardParagraph
-{
-    margin-top: 15px;
-    font-size: 20px;
-    font-family: ff-meta-serif-web-pro, serif;
-    width: 500px;
+.projectCardParagraph {
+  margin-top: 15px;
+  font-size: 20px;
+  font-family: ff-meta-serif-web-pro, serif;
+  width: 500px;
 }
 
-::selection
-{
-    background-color:#ffe2df;
+::selection {
+  background-color: #ffe2df;
 }
 
-.projectCardImageBody
-{
-    
-    height: 600px;
-    padding-bottom: 65px;
-    
+.projectCardImageBody {
+  height: 600px;
+  padding-bottom: 65px;
 }
 
-.projectCardImage 
-{
-    
-    height: 100%;
-    background-color:rgb(244, 244, 244);
+.projectCardImage {
+  height: 100%;
+  background-color: rgb(244, 244, 244);
 }
 
-.projectCardCaption
-{
-    font-family: ff-meta-serif-web-pro, serif; 
-    font-style: italic;
-    padding-top: 20px;
-    margin-left:60px;
-    color:black;
+.projectCardCaption {
+  font-family: ff-meta-serif-web-pro, serif;
+  font-style: italic;
+  padding-top: 20px;
+  margin-left: 60px;
+  color: black;
 }
 
-.lighten 
-{
-    background-color: white;
-    color:rgb(213,213,213);
+.lighten {
+  background-color: white;
+  color: rgb(213, 213, 213);
 }
 
-.projectMultiImageBody
-{
-    margin-top:100px;
-    width:100%;
-    height: 1000px;
-    display:grid;
-    grid-template-columns: 460px 460px;
-    grid-template-rows: 500px 500px;
-    flex-wrap: wrap;
-    justify-content: center;
+.projectMultiImageBody {
+  margin-top: 100px;
+  width: 100%;
+  height: 1050px;
+  display: grid;
+  grid-template-columns: 460px 460px;
+  grid-template-rows: 500px 500px;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.multiImageContainer
-{
-    
-    justify-self:center;
+.multiImageContainer {
+  justify-self: center;
+  justify-content: center;
 }
 
-.multiImageImage
-{
-    position:relative;
-    display:block;
-    width: 440px;
-    height: 350px;
-    background-color:rgb(244, 244, 244);
+.multiImageImage {
+  position: relative;
+  display: block;
+  width: 440px;
+  height: 350px;
+  background-color: rgb(244, 244, 244);
 }
 
-.multiImageCaption
-{
-    margin-top: 8px;
-    font-size: 18px;
-    margin-right:0;
-    font-family: ff-meta-serif-web-pro, serif;
-    width: 430px;
-    display:block;
-    position:relative;
-    text-align: center;
+.multiImageCaption {
+  margin-top: 8px;
+  font-size: 18px;
+  margin-left: 20px;
+  font-family: ff-meta-serif-web-pro, serif;
+  width: 400px;
+  display: block;
+  position: relative;
+  text-align: center;
 }
 
-.multiImageCaptionHead
-{
-    font-family:aktiv-grotesk-extended, serif;
-    font-weight:600;
-    font-size: 20px;
-    margin-top:20px;
-    text-align: center;
-    text-transform: uppercase;
-
+.multiImageCaptionHead {
+  font-family: aktiv-grotesk-extended, serif;
+  font-weight: 600;
+  font-size: 20px;
+  margin-top: 20px;
+  text-align: center;
+  text-transform: uppercase;
 }
-
-
-
 
 @media screen and (max-width: 1550px) {
-    .projectCardDiv
-    {
-        width: 750px;
-        
-    }
-
-    .projectCardSubtitle
-    {
-        font-size: 25px;
-    }
-
-    .projectCardParagraph
-    { 
-        font-size: 18px;
-        width: 450px;
-    }
-
-    
-
-
-    
+  .projectCardDiv {
+    width: 1050px;
   }
-
-@media screen and (max-width: 1180px) {
-    .projectCardDiv
-    {
-        width: 900px;
-        
-    }
-    .projectContainer
-    {
-    display:grid;
+  .projectContainer {
+    display: grid;
     flex-wrap: wrap;
     grid-template-columns: 1500px auto;
     column-gap: 30px;
     margin-top: 50px;
     height: 100%;
-    }
+  }
 
-    .projectLeft 
-    {
-        position:relative;
-        top:0px;
-        align-self: flex-start;
-        display: inline-block; 
-        width: 1500px;
-        display:flex;
-        justify-content: center;
-        margin-bottom: 60px;
-        
-    }
-
-   
+  .projectLeft {
+    position: relative;
+    top: 0px;
+    align-self: flex-start;
+    display: inline-block;
+    width: 1500px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;
+  }
 }
 
 @media screen and (max-width: 920px) {
-    .projectCardDiv
-    {
-        
-        width: 100%;
-        
-    }
-    .projectContainer
-    {
-        
-    display:flex;
-   
+  .projectCardDiv {
+    width: 100%;
+  }
+  .projectContainer {
+    display: flex;
+
     height: 100%;
-    }
+  }
 
-    .projectRight
-    {
-        width: 100%;
-    }
+  .projectRight {
+    width: 100%;
+  }
 
-    .projectLeft
-    {
-
-    top:0px;
-    margin-bottom:30px;
+  .projectLeft {
+    top: 0px;
+    margin-bottom: 30px;
     align-self: flex-start;
-    display: block; 
+    display: block;
     justify-content: center;
-    }
+  }
 
-    .projectCardCopy
-    {
-        margin-left: 30px;
-    }
+  .projectCardCopy {
+    margin-left: 30px;
+  }
 
-    .projectCardCaption
-    {
-        margin-left:30px;
-        margin-right:30px;
-    }
+  .projectCardCaption {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 
-    .projectCardParagraph
-    {
-        margin-top: 15px;
-        font-size: 15px;
-        font-family: ff-meta-serif-web-pro, serif;
-        width: 300px;
-    }
+  .projectCardParagraph {
+    margin-top: 15px;
+    font-size: 15px;
+    font-family: ff-meta-serif-web-pro, serif;
+    width: 300px;
+  }
 
-    .projectCardSubtitle
-    {
-        font-size: 20px;
-    }
-
+  .projectCardSubtitle {
+    font-size: 20px;
+  }
 }
