--- a/src/components/cardTypes/sticky.css
+++ b/src/components/cardTypes/sticky.css
@@ -1,194 +1,143 @@
-.projectSticky
-{
-    
-    margin-bottom: 15px;
-    
-    width: 450px;
-    height: 330px;
-    clip-path: 
-    polygon(
-      0% 0%,     /* top left */
-      0% 0%,     /* top left */
-      100% 0%,    /* top right */
-      100% 0%,   /* top right */
-      100% 80%,  /* bottom right */
-      80% 100%,  /* bottom right */
-      0% 100%,   /* bottom left */
-      0 100%      /* bottom left */
-    );
-    opacity: 0.95;
-    
-    
+.projectSticky {
+  margin-bottom: 15px;
+
+  width: 450px;
+  height: 330px;
+  clip-path: polygon(
+    0% 0%,
+    /* top left */ 0% 0%,
+    /* top left */ 100% 0%,
+    /* top right */ 100% 0%,
+    /* top right */ 100% 80%,
+    /* bottom right */ 80% 100%,
+    /* bottom right */ 0% 100%,
+    /* bottom left */ 0 100% /* bottom left */
+  );
+  opacity: 0.95;
 }
 
-.dogear
-{
-     clip-path: 
-    polygon(
-      80% 80%,     /* top left */
-      80% 80%,     /* top left */
-      100% 80%,    /* top right */
-      100% 0%,   /* top right */
-      100% 80%,  /* bottom right */
-      80% 100%,  /* bottom right */
-      80% 100%,   /* bottom left */
-      80% 100%      /* bottom left */
-    );
-    position:absolute;
-    width: 100%;
-    height: 100%;
+.dogear {
+  clip-path: polygon(
+    80% 80%,
+    /* top left */ 80% 80%,
+    /* top left */ 100% 80%,
+    /* top right */ 100% 0%,
+    /* top right */ 100% 80%,
+    /* bottom right */ 80% 100%,
+    /* bottom right */ 80% 100%,
+    /* bottom left */ 80% 100% /* bottom left */
+  );
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
-.stickyShadowWrapper
-{
-    margin-left: 0px;
-    margin-right: 0px;
-    filter: drop-shadow( 0 1px 2px rgba(0,0,0,0.10)) drop-shadow( 0 1px 1px rgba(0,0,0,0.20));
-    display: block;
+.stickyShadowWrapper {
+  margin-left: 0px;
+  margin-right: 0px;
+  filter: drop-shadow(0 1px 2px rgba(0, 0, 0, 0.1))
+    drop-shadow(0 1px 1px rgba(0, 0, 0, 0.2));
+  display: block;
 }
 
-.stickyTitle
-{
-    color:rgb(14,14,14);
-    display:inline-block;
-    font-family: aktiv-grotesk-extended,serif;
-    font-weight: 700;
-    font-style: italic;
-    font-size: 20px;
-    padding-top:11px;
-    padding-left:20px;
-    text-transform: uppercase;
-
+.stickyTitle {
+  color: rgb(14, 14, 14);
+  display: inline-block;
+  font-family: aktiv-grotesk-extended, serif;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 20px;
+  padding-top: 11px;
+  padding-left: 20px;
+  text-transform: uppercase;
 }
 
-.stickyCopyContainer
-{
-    margin-top:30px;
-    margin-right:60px;
-    margin-left: 40px;
+.stickyCopyContainer {
+  margin-top: 30px;
+  margin-right: 60px;
+  margin-left: 40px;
 }
 
-.stickyImage 
-{
-    width:50px;
-    height: 50px;
-    vertical-align: middle;
-    margin-right: 20px;
-    opacity:1;
-    border-radius: 25px;
+.stickyImage {
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
+  margin-right: 20px;
+  opacity: 1;
+  border-radius: 25px;
 }
 
-.stickyCopy
-{
-    color:rgb(14,14,14);
-    margin-bottom: 20px;
-    font-weight: 400;
-    font-size: 20px;
-    font-family:  aktiv-grotesk, serif;
-   
+.stickyCopy {
+  color: rgb(14, 14, 14);
+  margin-bottom: 20px;
+  font-weight: 400;
+  font-size: 20px;
+  font-family: aktiv-grotesk, serif;
 }
 
-.stickyBlue
-{
-    background-color: rgb(187, 225, 240);
-    color:rgb(213,213,213);
-    border-bottom: 1px solid rgb(139, 188, 208);
+.stickyBlue {
+  background-color: #ff5640;
+  color: rgb(213, 213, 213);
+  border-bottom: 1px solid #d52d16;
 }
 
-.stickyBlueBack
-{
-    background-color: rgb(211, 240, 252);
+.stickyBlueBack {
+  background-color: #ff6f5c;
 }
 
-.stickyGrey 
-{
-    filter:grayscale(.1);
- background-color:#ffffff;
- border-bottom: 1px solid rgb(222, 222, 222);
+.stickyGrey {
+  filter: grayscale(0.1);
+  background-color: #ffffff;
+  border-bottom: 1px solid rgb(222, 222, 222);
 }
 
-.stickyGreyBack
-{
-    filter:grayscale(.1);
-    background-color:#f4f4f4;  
+.stickyGreyBack {
+  filter: grayscale(0.1);
+  background-color: #f4f4f4;
 }
-
 
 @media screen and (max-width: 1550px) {
-    
-    .projectSticky
-    {
-        
-        
-        width: 370px;
-        height: 300px;
-    }
-    .stickyCopy
-    {
-        margin-bottom: 20px;
-        font-size: 18px;
-    
-    }
+  .stickyShadowWrapper {
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 
-    .stickyImage 
-    {
-        width:40px;
-        height: 40px;
-    
-    }
-}
+  .projectSticky {
+    width: 515px;
+    height: 330px;
+    margin-bottom: 0px;
+  }
 
-@media screen and (max-width: 1180px) {
-    .stickyShadowWrapper
-    {
-        display:inline-block;
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
-    .projectSticky
-    {
-        width: 440px;
-        height: 330px;
-        margin-bottom: 0px;
-    }
-
-        .dogear
-    {
-        width: 100%;
-        height: 100%;
-    }
+  .dogear {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media screen and (max-width: 920px) {
-    .stickyShadowWrapper
-    {
-        width: 100%;
-        margin-left:0;
-        margin-right:0;
-        margin-bottom:15px;
-    }
-    .projectSticky
-    {
-        width:100%;
-        height: 300px;
-        clip-path: 
-        polygon(
-        0% 0%,     /* top left */
-        0% 0%,     /* top left */
-        100% 0%,    /* top right */
-        100% 0%,   /* top right */
-        100% 100%,  /* bottom right */
-        100% 100%,  /* bottom right */
-        0% 100%,   /* bottom left */
-        0 100%      /* bottom left */
-        );
-    }
+  .stickyShadowWrapper {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+  .projectSticky {
+    width: 100%;
+    height: 300px;
+    clip-path: polygon(
+      0% 0%,
+      /* top left */ 0% 0%,
+      /* top left */ 100% 0%,
+      /* top right */ 100% 0%,
+      /* top right */ 100% 100%,
+      /* bottom right */ 100% 100%,
+      /* bottom right */ 0% 100%,
+      /* bottom left */ 0 100% /* bottom left */
+    );
+  }
 
-    .dogear
-    {
-        opacity:0;
-    }
+  .dogear {
+    opacity: 0;
+  }
 }
-
-
