--- a/src/index.css
+++ b/src/index.css
@@ -7,84 +7,54 @@
 @import "./components/projectHead.css";
 @import "./components/cardTypes/projectCards.css";
 @import "./components/cardTypes/sticky.css";
+@import "./components/cardTypes/nextProject.css";
 
-body 
-{
-
-    margin:0;
-    margin-top:0;
-    background-color: rgb(240, 240, 240);
-    text-decoration: none;
-    overflow-x: hidden;
+body {
+  margin: 0;
+  margin-top: 0;
+  background-color: rgb(240, 240, 240);
+  text-decoration: none;
+  overflow-x: hidden;
 }
 
-a
-{
-    text-decoration: none;
-    color: black;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-.dot 
-{
-background-color:rgb(255, 255, 255);
-height:20px;
-width:20px;
-border-radius: 10px;
-margin:14px;
-float:right;
+.dot {
+  background-color: rgb(255, 255, 255);
+  height: 20px;
+  width: 20px;
+  border-radius: 10px;
+  margin: 14px;
+  float: right;
 }
 
-.crust 
-{
-
-    background-color:rgb(46, 128, 160);
-    color:rgb(46, 128, 160);
+.crust {
+  background-color: rgb(46, 128, 160);
+  color: rgb(46, 128, 160);
 }
 
-.mantle 
-{
-    background-color:rgb(158, 208, 227);
-    color:rgb(158, 208, 227);
+.mantle {
+  background-color: rgb(158, 208, 227);
+  color: rgb(158, 208, 227);
 }
 
-.red
-{
-   background-color: #ff897a;
+.red {
+  background-color: #ff897a;
 }
 
-.core
-{
-    background-color:rgb(14, 14, 14);
-    color:rgb(14, 14, 14);
+.core {
+  background-color: rgb(14, 14, 14);
+  color: rgb(14, 14, 14);
 }
 
-.cloud
-{
-    background-color:rgb(225, 225, 225);
+.cloud {
+  background-color: rgb(225, 225, 225);
 }
 
-.flex 
-{
-    display: flex;
-    justify-content: center;
+.flex {
+  display: flex;
+  justify-content: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-    
-    
-
-
-
-
-
-
-
