--- a/src/components/cardTypes/projectCards.css
+++ b/src/components/cardTypes/projectCards.css
@@ -127,6 +127,7 @@
 .multiImageContainer {
   justify-self: center;
   justify-content: center;
+  width: 100%;
 }
 
 .multiImageImage {
@@ -135,6 +136,7 @@
   width: 440px;
   height: 350px;
   background-color: rgb(244, 244, 244);
+  margin-right: 0;
 }
 
 .multiImageCaption {
@@ -182,7 +184,54 @@
   }
 }
 
-@media screen and (max-width: 920px) {
+@media screen and (max-width: 1100px) {
+  .projectCardDiv {
+    width: 900px;
+  }
+
+  .projectMultiImageBody {
+    grid-template-columns: 380px 380px;
+    grid-template-rows: 450px 450px;
+    column-gap: 20px;
+    margin-top: 80px;
+    height: 900px;
+  }
+
+  .multiImageImage {
+    width: 100%;
+    height: 290px;
+  }
+
+  .multiImageCaption {
+    font-size: 16px;
+    margin-left: 10px;
+    width: 340px;
+  }
+
+  .multiImageCaptionHead {
+    font-size: 18px;
+  }
+
+  .projectCardSubtitle {
+    font-size: 27px;
+  }
+
+  .projectCardSubtitle2 {
+    color: rgb(14, 14, 14);
+    font-family: aktiv-grotesk-extended, serif;
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+  .projectCardParagraph {
+    margin-top: 15px;
+    font-size: 18px;
+    font-family: ff-meta-serif-web-pro, serif;
+    width: 460px;
+  }
+}
+
+@media screen and (max-width: 910px) {
   .projectCardDiv {
     width: 100%;
   }
@@ -222,5 +271,16 @@
 
   .projectCardSubtitle {
     font-size: 20px;
+  }
+
+  .projectMultiImageBody {
+    margin-top: 100px;
+    width: 100%;
+    height: 1050px;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 300px;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
