--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,83 +1,66 @@
-.cardTitle 
-{
-    color:black;
-    display:inline-block;
-    font-family: aktiv-grotesk-extended,serif;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 20px;
-    padding-top:11px;
-    padding-left:20px;
+.cardTitle {
+  color: black;
+  display: inline-block;
+  font-family: aktiv-grotesk-extended, serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 20px;
+  padding-top: 11px;
+  padding-left: 20px;
 }
 
-
-
-.cardDiv 
-{
-    background-color: rgb(242, 242, 242);
-    height:600px;
-    width:400px;
-    margin: 0px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-    display: inline-block;
-    place-self:center;
-    transition:0.2s;
+.cardDiv {
+  background-color: rgb(242, 242, 242);
+  height: 600px;
+  width: 400px;
+  margin: 0px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  display: inline-block;
+  place-self: center;
+  transition: 0.2s;
 }
 
-
-
-.cardDiv:hover 
-{
-    margin-top:-20px;
-    margin-bottom:20px;
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-
+.cardDiv:hover {
+  margin-top: -20px;
+  margin-bottom: 20px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-
-
-.cardHead 
-{
-    background-color: white;
-    width: 100%;
-    height: 48px;
+.cardHead {
+  background-color: white;
+  width: 100%;
+  height: 48px;
 }
 
-.cards 
-{
-    margin-top:120px;
-    display: grid;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 80%;
-    grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
-    grid-gap: 4rem;
-    margin-bottom: 70px;
+.cards {
+  margin-top: 120px;
+  display: grid;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 80%;
+  grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
+  grid-gap: 4rem;
+  margin-bottom: 70px;
 }
 
-.cardImage
-{
-    width: 400px;
-    height: 552px;
-    object-fit:cover;
+.cardImage {
+  width: 400px;
+  height: 552px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 480px) {
-    .cardDiv 
-    {
-      width:90%;
-    }
-    .cardImage 
-    {
-        width: 100%;
-    }
-    .cards
-    {
-    width:100%;
-    }
-    .cardTitle
-    {
-        font-size: 16px;
-    }
+  .cardDiv {
+    width: 90%;
   }
+  .cardImage {
+    width: 100%;
+  }
+  .cards {
+    width: 100%;
+  }
+  .cardTitle {
+    font-size: 16px;
+  }
+}
