--- a/src/components/cardTypes/projectCards.css
+++ b/src/components/cardTypes/projectCards.css
@@ -276,11 +276,18 @@
   .projectMultiImageBody {
     margin-top: 100px;
     width: 100%;
-    height: 1050px;
+    height: 120%;
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 300px;
+    grid-template-columns: 90%;
+    grid-template-rows: 400px;
     flex-wrap: wrap;
     justify-content: center;
+  }
+
+  .multiImageCaption {
+    font-size: 16px;
+    margin-left: 10px;
+    width: 100%;
+    margin-bottom: 40px;
   }
 }
