--- a/src/components/cardTypes/projectCards.css
+++ b/src/components/cardTypes/projectCards.css
@@ -113,52 +113,6 @@
   color: rgb(213, 213, 213);
 }
 
-.projectMultiImageBody {
-  margin-top: 100px;
-  width: 100%;
-  height: 1050px;
-  display: grid;
-  grid-template-columns: 460px 460px;
-  grid-template-rows: 500px 500px;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.multiImageContainer {
-  justify-self: center;
-  justify-content: center;
-  width: 100%;
-}
-
-.multiImageImage {
-  position: relative;
-  display: block;
-  width: 440px;
-  height: 350px;
-  background-color: rgb(244, 244, 244);
-  margin-right: 0;
-}
-
-.multiImageCaption {
-  margin-top: 8px;
-  font-size: 18px;
-  margin-left: 20px;
-  font-family: ff-meta-serif-web-pro, serif;
-  width: 400px;
-  display: block;
-  position: relative;
-  text-align: center;
-}
-
-.multiImageCaptionHead {
-  font-family: aktiv-grotesk-extended, serif;
-  font-weight: 600;
-  font-size: 20px;
-  margin-top: 20px;
-  text-align: center;
-  text-transform: uppercase;
-}
-
 @media screen and (max-width: 1550px) {
   .projectCardDiv {
     width: 1050px;
@@ -189,29 +143,6 @@
     width: 900px;
   }
 
-  .projectMultiImageBody {
-    grid-template-columns: 380px 380px;
-    grid-template-rows: 450px 450px;
-    column-gap: 20px;
-    margin-top: 80px;
-    height: 900px;
-  }
-
-  .multiImageImage {
-    width: 100%;
-    height: 290px;
-  }
-
-  .multiImageCaption {
-    font-size: 16px;
-    margin-left: 10px;
-    width: 340px;
-  }
-
-  .multiImageCaptionHead {
-    font-size: 18px;
-  }
-
   .projectCardSubtitle {
     font-size: 27px;
   }
@@ -232,6 +163,12 @@
 }
 
 @media screen and (max-width: 910px) {
+  .projectCardDiv {
+    width: 768px;
+  }
+}
+
+@media screen and (max-width: 768px) {
   .projectCardDiv {
     width: 100%;
   }
@@ -271,23 +208,5 @@
 
   .projectCardSubtitle {
     font-size: 20px;
-  }
-
-  .projectMultiImageBody {
-    margin-top: 100px;
-    width: 100%;
-    height: 120%;
-    display: grid;
-    grid-template-columns: 90%;
-    grid-template-rows: 400px;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .multiImageCaption {
-    font-size: 16px;
-    margin-left: 10px;
-    width: 100%;
-    margin-bottom: 40px;
   }
 }
