--- a/src/components/info.css
+++ b/src/components/info.css
@@ -101,16 +101,17 @@
 
 .exLink {
   width: 100%;
-  height: 73px;
+  height: 62px;
   text-align: center;
-  padding-top: 25px;
+  padding-top: 36px;
   background-color: rgb(235, 235, 235);
   border-radius: 2px;
   margin-bottom: 10px;
   font-family: aktiv-grotesk-extended, serif;
-  font-size: 30px;
+  font-size: 22px;
   font-weight: 700;
   position: relative;
+  text-transform: uppercase;
   display: block;
 }
 
