--- a/src/components/projectHead.css
+++ b/src/components/projectHead.css
@@ -139,6 +139,7 @@
 
 @media screen and (max-width: 920px) {
   .projectHead {
+    height: 450px;
     display: flex;
     justify-content: center;
     width: 100%;
@@ -183,5 +184,19 @@
   .projectVerticalText {
     width: 200px;
     font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .projectLogo {
+    position: relative;
+    display: block;
+    width: 150px;
+    margin-bottom: 15px;
+    margin-right: 0px;
+  }
+
+  .projectHead {
+    height: 380px;
   }
 }
