--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 @import "./components/cardTypes/projectCards.css";
 @import "./components/cardTypes/sticky.css";
 @import "./components/cardTypes/nextProject.css";
+@import "./components/cardTypes/multiImage.css";
 
 body {
   margin: 0;
@@ -37,12 +38,12 @@ a {
 }
 
 .crust {
-  background-color: rgb(46, 128, 160);
+  background-color: rgb(64, 124, 176);
   color: rgb(46, 128, 160);
 }
 
 .mantle {
-  background-color: rgb(158, 208, 227);
+  background-color: rgb(138, 200, 255);
   color: rgb(158, 208, 227);
 }
 
