--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 @import "./components/cardTypes/sticky.css";
 @import "./components/cardTypes/nextProject.css";
 @import "./components/cardTypes/multiImage.css";
+@import "./components/zoom.css";
 
 body {
   margin: 0;
