--- a/src/components/cardTypes/multiImage.css
+++ b/src/components/cardTypes/multiImage.css
@@ -17,7 +17,7 @@
 
 .multiImageImage {
   position: relative;
-  display: block;
+
   width: 440px;
   background-color: rgb(244, 244, 244);
   margin-right: 0;
@@ -54,7 +54,6 @@
 
   .multiImageImage {
     width: 100%;
-    height: 290px;
   }
 
   .multiImageCaption {
@@ -74,8 +73,8 @@
     width: 100%;
     height: 120%;
     display: grid;
-    grid-template-columns: 90%;
-    grid-template-rows: 400px;
+    grid-template-columns: 80%;
+    grid-template-rows: 550px;
     flex-wrap: wrap;
     justify-content: center;
   }
@@ -85,5 +84,33 @@
     margin-left: 10px;
     width: 100%;
     margin-bottom: 40px;
+  }
+
+  .multiImageCaptionHead {
+    font-size: 18px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .projectMultiImageBody {
+    grid-template-rows: 25%;
+    grid-template-columns: 100%;
+  }
+
+  .multiImageCaption {
+    font-size: 14px;
+    margin-left: 5%;
+    width: 90%;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .multiImageCaptionHead {
+    font-size: 14px;
+  }
+
+  .projectMultiImageBody {
+    margin-top: 0px;
   }
 }
