--- a/src/components/cardTypes/nextProject.css
+++ b/src/components/cardTypes/nextProject.css
@@ -17,7 +17,7 @@
 .nextProjectDivider {
   width: 1520px;
   height: 1px;
-  background-color: rgb(193, 193, 193);
+  background-color: lightgray;
   margin-bottom: 30px;
   display: block;
   position: relative;
@@ -134,7 +134,7 @@
     width: 100%;
   }
   .nextProjectContainer2 {
-    width: 100%;
+    width: 90%;
   }
 
   .nextProjectBody {
@@ -153,16 +153,17 @@
   .nextProjectName {
     width: 100%;
     text-align: center;
+    font-size: 25px;
   }
 
   .nextProjectText {
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 400;
     font-family: ff-meta-serif-web-pro, serif;
     margin-top: 0px;
-
-    width: 320px;
+    width: 300px;
     text-align: center;
+    margin-top: 0px;
   }
 
   .nextProjectBody {
@@ -175,5 +176,51 @@
 
   .nextImage {
     display: none;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nextProject {
+    width: 100%;
+  }
+  .nextProjectContainer2 {
+    width: 90%;
+    margin-top: 15px;
+  }
+
+  .nextProjectBody {
+    grid-template-columns: 100%;
+    grid-template-rows: 250px;
+  }
+
+  .nextProjectTextContainer {
+    width: 100%;
+    height: 200px;
+    display: block;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .nextProjectName {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .nextProjectText {
+    font-size: 14px;
+    font-weight: 400;
+    font-family: ff-meta-serif-web-pro, serif;
+    margin-top: 0px;
+    width: 200px;
+    text-align: center;
+    margin-top: -30px;
+  }
+
+  .nextProjectBody {
+    height: 300px;
+  }
+  .nextProject {
+    margin-top: 15px;
   }
 }
