--- a/src/components/cardTypes/nextProject.css
+++ b/src/components/cardTypes/nextProject.css
@@ -70,14 +70,20 @@
 
 .nextImage {
   width: 100%;
-  height: 100%;
+  height: 300px;
   background-color: rgb(235, 235, 235);
   display: inline-block;
 }
 
+.nextImageImage {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .nextProjectBody {
   width: 100%;
-  height: 300px;
+  height: 100%;
   display: grid;
   grid-template-columns: 470px auto;
 }
